# Thesis-MCTS-GGP

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  MCTS_GGP_THESIS  Makefile  cmake_install.cmake  connect4_3vD_10.txt  connect4_3vD_10_branchingfactors.csv  connect4_3vD_10_gamelengths.csv  connect4_3vD_10_rolloutlengths.csv  connect4_3vD_10_terminals.csv  connect4_3vD_11.txt  connect4_3vD_11_branchingfactors.csv  connect4_3vD_11_gamelengths.csv  connect4_3vD_11_rolloutlengths.csv  connect4_3vD_11_terminals.csv  connect4_3vD_4.txt  connect4_3vD_4_branchingfactors.csv  connect4_3vD_4_gamelengths.csv  connect4_3vD_4_rolloutlengths.csv  connect4_3vD_4_terminals.csv  connect4_3vD_5.txt  connect4_3vD_5_branchingfactors.csv  connect4_3vD_5_gamelengths.csv  connect4_3vD_5_rolloutlengths.csv  connect4_3vD_5_terminals.csv  connect4_3vD_6.txt  connect4_3vD_6_branchingfactors.csv  connect4_3vD_6_gamelengths.csv  connect4_3vD_6_rolloutlengths.csv  connect4_3vD_6_terminals.csv  connect4_3vD_7.txt  connect4_3vD_7_branchingfactors.csv  connect4_3vD_7_gamelengths.csv  connect4_3vD_7_rolloutlengths.csv  connect4_3vD_7_terminals.csv  connect4_3vD_8.txt  connect4_3vD_8_branchingfactors.csv  connect4_3vD_8_gamelengths.csv  (+48 more)
common/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  direction.hpp  game_types.h  pieces.h  resource.h
constants/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  game_constants.h
games/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  game_state.h
games/breakthrough/: CMakeLists.txt  CTestTestfile.cmake  Makefile  breakthrough_move.h  breakthrough_state.cpp  breakthrough_state.h  cmake_install.cmake
games/catchthelion/: CMakeLists.txt  CTestTestfile.cmake  Makefile  catchthelion_move.h  catchthelion_state.cpp  catchthelion_state.h  cmake_install.cmake
games/connect4/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  connect4_move.h  connect4_state.cpp  connect4_state.h  move.h  state.cpp  state.h
games/linesofaction/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  linesofaction_move.hpp  linesofaction_state.cpp  linesofaction_state.hpp
games/othello/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  othello_move.h  othello_state.cpp  othello_state.h
interfaces/: state.h
main/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  game_manager.h  game_results.h
mcts/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  model.h  move.h  node.cpp  node.h  state.h
models/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  model.cpp  model.h  model_factory.h
models/detector/: CMakeLists.txt  terminal_detector.h
models/minimax/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  minimax_rollout.h  minimax_selection.h
models/standard/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  standard.h
strategy/: CMakeLists.txt  CTestTestfile.cmake  Makefile  breakthrough_strategy.cpp  catchthelion_strategy.cpp  cmake_install.cmake  connect4_strategy.cpp  othello_strategy.cpp  strategy.h
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_defines.h
tests/breakthrough/: CMakeLists.txt  CTestTestfile.cmake  Makefile  breakthrough_minimax_ab_unittest.cpp  breakthrough_state_evaluate_state_unittest.cpp  breakthrough_state_legal_moves_unittest.cpp  cmake_install.cmake  test_breakthrough
tests/catchthelion/: CMakeLists.txt  CTestTestfile.cmake  Makefile  catchthelion_defines.h  catchthelion_state_evaluate_state_unittest.cpp  catchthelion_state_legal_moves_unittest.cpp  catchthelion_state_moves_unittest.cpp  catchthelion_state_real_scenarios_test.cpp  cmake_install.cmake  test_catchthelion
tests/connect4/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  connect4_state_unittest.cpp  state_unittest.cpp  test_connect4
tests/games/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  game_state_unittest.cpp  test_games
tests/linesofaction/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  linesofaction_state_legal_moves_unittest.cpp  test_linesofaction
tests/models/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  minimax_rollout_simulation_policy_unittest.cpp  test_models
tests/othello/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  othello_state_evaluate_state_unittest.cpp  othello_state_gen.h  othello_state_legal_moves_unittest.cpp  othello_state_unittest.cpp  test_othello
tests/test_helpers/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_defines.h
tests/test_utility/: CMakeLists.txt  test_game_defines.h
